[package]
name = "brightshade"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.23"
colored = "3.0.0"
sacn = "0.10.0"
artnet_protocol = "0.4.3"
rosc = "0.11.4"
midir = "0.10.1"
ndi = "0.1.2"
spirv-std = "0.9.0"
bytemuck = "1.22.0"
env_logger = "0.11"
pollster = "0.4"
wgpu = "26.0.0"
crossterm = "0.29.0"
